# xsdb-mcp

./: Cargo.toml  README.md
src/: main.rs  server.rs
