[package]
name = "xsdb-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.0", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
schemars = "1.2"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
